# blaze-dock

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  fedora43-dock-instructions.md  instructions.md  plan1.md  plan2.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
config/: blazedock.toml
data/: blazedock-autostart.desktop  blazedock.desktop
docs/: FEATURE_STATUS.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  ROADMAP.md
scripts/: install-deps.sh  install.sh
src/: app.rs  main.rs
src/config/: mod.rs  profiles.rs  settings.rs
src/services/: dbus_service.rs  drive_monitor.rs  keyboard_service.rs  mod.rs  multimonitor.rs  process_tracker.rs  recent_files.rs  running_apps.rs  screencopy_service.rs  theme_service.rs  window_tracker.rs
src/ui/: badge.rs  dock_item.rs  drag_drop.rs  expose_view.rs  magnification.rs  mod.rs  progress_ring.rs  running_indicator.rs  search_overlay.rs  settings_dialog.rs  stack_item.rs  style.css  style.rs  trash_item.rs  window.rs  window_preview.rs
src/utils/: desktop_entry.rs  launcher.rs  mod.rs
